--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,11 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "mypy",
-    "ruff",
+    "ruff==0.3.4",
     "pytest",
     "types-pyyaml",
     "pip-tools",
+    "pre-commit"
 ]
 
 [project.entry-points."pynxtools.reader"]
@@ -50,12 +51,16 @@ local_scheme = "node-and-date"
 
 [tool.ruff]
 include = ["pynxtools_xrd/*.py", "tests/*.py"]
-lint.select = [
+line-length = 88
+indent-width = 4
+
+[tool.ruff.lint]
+select = [
     "E", # pycodestyle
     "W", # pycodestyle
     "PL", # pylint
 ]
-lint.ignore = [
+ignore = [
     "E501", # Line too long ({width} > {limit} characters)
     "E701", # Multiple statements on one line (colon)
     "E731", # Do not assign a lambda expression, use a def
@@ -70,7 +75,13 @@ lint.ignore = [
     "PLR1714", # consider-using-in
     "PLR5501", # else-if-used
 ]
-lint.fixable = ["ALL"]
+fixable = ["ALL"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
 
 [tool.mypy]
 strict = false
