--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "xmltodict"
+    "xmltodict",
+    "pint"
 ]
 
 [project.urls]
