Changes corresponding to the 2theta fix.

--- a/pynxtools_xrd/xrd.mapping.json
+++ b/pynxtools_xrd/xrd.mapping.json
@@ -1,21 +1,21 @@
 {
     "/ENTRY[entry]/definition": "NXxrd_pan",
     "/ENTRY[entry]/method": "X-Ray Diffraction (XRD)",
-    "/ENTRY[entry]/2theta_plot/intensity": "/intensity",
-    "/ENTRY[entry]/2theta_plot/two_theta": "/2Theta",
-    "/ENTRY[entry]/2theta_plot/two_theta/@units": "/2Theta@units",
-    "/ENTRY[entry]/2theta_plot/omega": "/Omega",
-    "/ENTRY[entry]/2theta_plot/omega/@units": "/Omega@units",
-    "/ENTRY[entry]/2theta_plot/chi": "/Chi",
-    "/ENTRY[entry]/2theta_plot/phi": "/Phi",
-    "/ENTRY[entry]/2theta_plot/phi/@units": "/Phi@units",
-    "/ENTRY[entry]/COLLECTION[collection]/measurement_type": "/metadata/measurement_type",
-    "/ENTRY[entry]/COLLECTION[collection]/2theta": {
-        "link": "/ENTRY[entry]/2theta_plot/two_theta"
+    "/ENTRY[entry]/measurement_type": "/metadata/measurement_type",
+    "/ENTRY[entry]/two_theta_plot/intensity": "/intensity",
+    "/ENTRY[entry]/two_theta_plot/two_theta": "/2Theta",
+    "/ENTRY[entry]/two_theta_plot/two_theta/@units": "/2Theta@units",
+    "/ENTRY[entry]/two_theta_plot/omega": "/Omega",
+    "/ENTRY[entry]/two_theta_plot/omega/@units": "/Omega@units",
+    "/ENTRY[entry]/two_theta_plot/chi": "/Chi",
+    "/ENTRY[entry]/two_theta_plot/phi": "/Phi",
+    "/ENTRY[entry]/two_theta_plot/phi/@units": "/Phi@units",
+    "/ENTRY[entry]/OBJECT[experiment_config]/two_theta": {
+        "link": "/ENTRY[entry]/two_theta_plot/two_theta"
     },
-    "/ENTRY[entry]/COLLECTION[collection]/omega": "/Omega",
-    "/ENTRY[entry]/COLLECTION[collection]/count_time": "/countTime",
-    "/ENTRY[entry]/COLLECTION[collection]/count_time/@units": "/countTime@units",
+    "/ENTRY[entry]/experiment_config/omega": "/Omega",
+    "/ENTRY[entry]/experiment_config/count_time": "/countTime",
+    "/ENTRY[entry]/experiment_config/count_time/@units": "/countTime@units",
     "/ENTRY[entry]/INSTRUMENT[instrument]/DETECTOR[detector]/scan_axis": "/metadata/scan_axis",
     "/ENTRY[entry]/INSTRUMENT[instrument]/SOURCE[source]/xray_tube_material": "/metadata/source/anode_material",
     "/ENTRY[entry]/INSTRUMENT[instrument]/SOURCE[source]/k_alpha_one": "/metadata/source/kAlpha1",
