--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "pint",
     "fairmat-readers-xrd",
     # "pynxtools>=0.5.0",
-    "pynxtools@https://github.com/FAIRmat-NFDI/pynxtools@update_XRD_app_def"
+    "pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools@update_XRD_app_def"
 ]
 
 [project.urls]
