--- a/pynxtools_xrd/xrd.mapping.json
+++ b/pynxtools_xrd/xrd.mapping.json
@@ -2,16 +2,34 @@
     "/ENTRY[entry]/definition": "NXxrd_pan",
     "/ENTRY[entry]/method": "X-Ray Diffraction (XRD)",
     "/ENTRY[entry]/measurement_type": "/metadata/measurement_type",
-    "/ENTRY[entry]/two_theta_plot/intensity": "/intensity",
-    "/ENTRY[entry]/two_theta_plot/two_theta": "/2Theta",
-    "/ENTRY[entry]/two_theta_plot/two_theta/@units": "/2Theta@units",
-    "/ENTRY[entry]/two_theta_plot/omega": "/Omega",
-    "/ENTRY[entry]/two_theta_plot/omega/@units": "/Omega@units",
-    "/ENTRY[entry]/two_theta_plot/chi": "/Chi",
-    "/ENTRY[entry]/two_theta_plot/phi": "/Phi",
-    "/ENTRY[entry]/two_theta_plot/phi/@units": "/Phi@units",
-    "/ENTRY[entry]/OBJECT[experiment_config]/two_theta": {
-        "link": "/ENTRY[entry]/two_theta_plot/two_theta"
+    "/ENTRY[entry]/experiment_result/intensity": "/intensity",
+    "/ENTRY[entry]/experiment_result/two_theta": "/2Theta",
+    "/ENTRY[entry]/experiment_result/two_theta/@units": "/2Theta@units",
+    "/ENTRY[entry]/experiment_result/omega": "/Omega",
+    "/ENTRY[entry]/experiment_result/omega/@units": "/Omega@units",
+    "/ENTRY[entry]/experiment_result/chi": "/Chi",
+    "/ENTRY[entry]/experiment_result/phi": "/Phi",
+    "/ENTRY[entry]/experiment_result/phi/@units": "/Phi@units",
+    "/ENTRY[entry]/experiment_result/q_parallel": "",
+    "/ENTRY[entry]/experiment_result/q_parallel/@units": "",
+    "/ENTRY[entry]/experiment_result/q_perpendicular": "",
+    "/ENTRY[entry]/experiment_result/q_perpendicular/@units": "",
+    "/ENTRY[entry]/experiment_result/q_norm": "",
+    "/ENTRY[entry]/experiment_result/q_norm/@units": "",
+    "/ENTRY[entry]/experiment_config/two_theta": {
+        "link": "/ENTRY[entry]/experiment_result/two_theta"
+    },
+    "/ENTRY[entry]/q_data/q": {
+        "link": "/ENTRY[entry]/experiment_result/q_norm"
+    }, 
+    "/ENTRY[entry]/q_data/intensity": {
+        "link": "/ENTRY[entry]/experiment_result/intensity"
+    }, 
+    "/ENTRY[entry]/q_data/q_parallel": {
+        "link": "/ENTRY[entry]/experiment_result/q_parallel"
+    }, 
+    "/ENTRY[entry]/q_data/q_perpendicular": {
+        "link": "/ENTRY[entry]/experiment_result/q_perpendicular"
     },
     "/ENTRY[entry]/experiment_config/omega": "/Omega",
     "/ENTRY[entry]/experiment_config/count_time": "/countTime",
