--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,7 @@ dependencies = [
     "xmltodict",
     "pint",
     "fairmat-readers-xrd",
-    # "pynxtools>=0.5.0",
-    "pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools@update_XRD_app_def"
+    "pynxtools>=0.7.1",
 ]
 
 [project.urls]
