--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,30 +2,31 @@ name: linting
 
 on: [push]
 
+env:
+  UV_SYSTEM_PYTHON: true
+
 jobs:
   linting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           git submodule sync --recursive
           git submodule update --init --recursive --jobs=4
-          python -m pip install --upgrade pip
-      - name: Install package
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install package and dev dependencies
         run: |
-          python -m pip install --no-deps .
-      - name: Install requirements
+          uv pip install --no-deps .
+          uv pip install -r dev-requirements.txt
+      - name: ruff check
         run: |
-          python -m pip install -r dev-requirements.txt
-      - name: ruff
-        run: |
-          ruff pynxtools_xrd tests
-      - name: ruff formatting
+          ruff check pynxtools_xrd tests
+      - name: ruff format
         run: |
           ruff format --check pynxtools_xrd tests
       - name: mypy
