--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  UV_SYSTEM_PYTHON: true
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -15,21 +18,20 @@ jobs:
         python_version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: recursive
-      - name: Set up Python ${{matrix.python_version}}
-        uses: actions/setup-python@v4
+      - name: Set up Python ${{ matrix.python_version }}
+        uses: actions/setup-python@v5
         with:
-          python-version: ${{matrix.python_version}}
+          python-version: ${{ matrix.python_version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pynxtools
+          curl -LsSf https://astral.sh/uv/install.sh | sh
       - name: Install package
         run: |
-          pip install ".[dev]"
+          uv pip install ".[dev]"
       - name: Test with pytest
         run: |
           pytest tests
