Add pynxtools master branch for test purpose.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "xmltodict",
     "pint",
     "fairmat-readers-xrd",
-    "pynxtools>=0.7.1",
+    "pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools@master#egg=pynxtools",
+    # "pynxtools>=0.7.1",
 ]
 
 [project.urls]
