--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "xmltodict",
     "pint",
     "fairmat-readers-xrd",
-    "pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools@master#egg=pynxtools",
+    "pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools@FixErrorIfUnitInPintQuantity#egg=pynxtools",
     # "pynxtools>=0.7.1",
 ]
 
