--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,38 +5,34 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
 name: Upload Python Package
 
 on:
   release:
     types: [published]
 
-env:
-  UV_SYSTEM_PYTHON: true
-
 jobs:
   deploy:
-    name: Upload release to PyPI
     runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/pynxtools-xrd
     permissions:
       id-token: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          submodules: recursive
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: "3.x"
       - name: Install dependencies
         run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv pip install build
+          python -m pip install --upgrade pip
+          pip install build
+
       - name: Build package
         run: python -m build
-      - name: Publish package distributions to PyPI
+      - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          verbose: true
