--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,6 @@ on:
 env:
   python-version: 3.12
 
-
 jobs:
   setup:
     name: Checkout and Install
@@ -35,9 +34,34 @@ jobs:
           CITATION_VERSION=$(grep '^version:' CITATION.cff | cut -d' ' -f2)
           echo "version=$CITATION_VERSION" >> "$GITHUB_OUTPUT"
 
+  test:
+    name: Run Tests
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+      - name: Install uv and set the python version to ${{ env.python-version }}
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: ${{ env.python-version }}
+      - name: Install latest nomad release
+        run: |
+          uv pip install nomad-lab[infrastructure]
+      - name: Install pynxtools-xps
+        run: |
+          uv pip install -e ".[dev]"
+      - name: Install latest pynxtools release
+        run: |
+          uv pip install pynxtools
+      - name: Test with pytest
+        run: pytest tests/
+
   build:
     name: Build Package
-    needs: [compare-versions, test]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
