drop support for python 3.9 (EOL), align workflows with other plugins (#29)
Co-authored-by: mkuehbach <markus.kuehbach@physik.hu-berlin.de>
Co-authored-by: Rubel <rubel.mozumder@outlook.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,12 @@ authors = [
 description = "A plugin for pynxtools to convert XRD into NeXus application definitions."
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
@@ -76,6 +76,7 @@ select = [
     "E", # pycodestyle
     "W", # pycodestyle
     "PL", # pylint
+    "NPY201", # upgrade to numpy >2
 ]
 ignore = [
     "E501", # Line too long ({width} > {limit} characters)
