--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,16 +16,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
       - name: Install uv and set the python version to ${{ matrix.python-version }}
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install package
+      - name: Install nomad
+        run: |
+          uv pip install nomad-lab[infrastructure]@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR.git
+      - name: Install package and pynxtools master branch
         run: |
           uv pip install ".[dev]"
+          uv pip install coverage coveralls
       - name: Install pynxtools master branch
         run: |
           uv pip install pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools
       - name: Test with pytest
         run: |
-          pytest tests
+          coverage run -m pytest -sv --show-capture=no tests
+      - name: Submit to coveralls
+        continue-on-error: true
+        if: ${{ matrix.python-version == '3.12' }}
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+            coveralls --service=github
