--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,7 +20,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install package and pynxtools master branch
+      - name: Install package
         run: |
           uv pip install ".[dev]"
           uv pip install coverage coveralls
